--- a/src/codeint/companyMainPage.html
+++ b/src/codeint/companyMainPage.html
@@ -35,136 +35,132 @@
 		<img src="images/codeint.png" style="width:15%; margin: auto;">
 	</div>
 	<div class="w3-container" style="width: 100%; display: inline-block;  margin-top: 8%; padding-bottom: 4%;">
-		<div style="display: inline-block; width: 80%; max-height: 8%;">
+		<div style="display: inline-block; width: 70%; max-height: 8%;">
 			<div class="w3-container" style="text-align: center;">
-				<p><button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">Create Interview</button>
-				<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">Create CV Pool</button>
+				<div style=" display: inline-block; padding-right: 10%;">
+					<button class="w3-button w3-purple w3-round-large">Create Interview</button>
+				</div>
+				<div style=" display: inline-block;">
+					<button class="w3-button w3-purple w3-round-large">Create CV Pool</button>
+				</div>
 
 				<p><h2 style="font-weight: bold; display: inline-block;">Finished Interviews</h2>
-				<ul class="w3-ul w3-margin-top" style="width: 50%; height: 200px; margin: auto; overflow: auto;">
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border w3-purple w3-round-large">50</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border w3-purple w3-round-large">50</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border w3-purple w3-round-large">50</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border w3-purple w3-round-large">50</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border w3-purple w3-round-large">50</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border w3-purple w3-round-large">50</label>
-						</p>
+				<ul class="w3-ul w3-margin-top" style="width: 60%; height: 200px; margin: auto; overflow: auto;">
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border w3-round-large" style="width: 10%; display: inline-block; background-color: rgba(128,0,128,0.3); font-style: italic; ">50</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border w3-round-large" style="width: 10%; display: inline-block; background-color: rgba(128,0,128,0.3); font-style: italic; ">50</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border w3-round-large" style="width: 10%; display: inline-block; background-color: rgba(128,0,128,0.3); font-style: italic; ">50</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border w3-round-large" style="width: 10%; display: inline-block; background-color: rgba(128,0,128,0.3); font-style: italic; ">50</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border w3-round-large" style="width: 10%; display: inline-block; background-color: rgba(128,0,128,0.3); font-style: italic; ">50</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border w3-round-large" style="width: 10%; display: inline-block; background-color: rgba(128,0,128,0.3); font-style: italic; ">50</li>
+					</p>
 			  	</ul>
 				<p><h2 style="font-weight: bold; display: inline-block;">Waiting Interviews</h2>
-				<ul class="w3-ul w3-margin-top" style="width: 50%; height: 200px; margin: auto; overflow: auto;">
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border">END DATE</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border">END DATE</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border">END DATE</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border">END DATE</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border">END DATE</label>
-						</p>
-						<p>
-							<label class="w3-border">username</label>
-							<label class="w3-border">END DATE</label>
-						</p>
+				<ul class="w3-ul w3-margin-top" style="width: 60%; height: 200px; margin: auto; overflow: auto; text-align: center;">
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border" style="width: 30%; display: inline-block;">END DATE</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border" style="width: 30%; display: inline-block;">END DATE</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border" style="width: 30%; display: inline-block;">END DATE</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border" style="width: 30%; display: inline-block;">END DATE</li>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<li class="w3-border" style="width: 30%; display: inline-block;">END DATE</li>
+					</p>
 			  	</ul>
 
 				<p><h2 style="font-weight: bold;">Waiting Responses</h2>
-				<ul class="w3-ul w3-margin-top" style="width: 50%; height: 200px; margin: auto; overflow: auto;">
-						<p>
-							<label class="w3-border">username3</label>
-							<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
-						</p>
-						<p>
-							<label class="w3-border">username3</label>
-							<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
-						</p>
-						<p>
-							<label class="w3-border">username3</label>
-							<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
-						</p>
-						<p>
-							<label class="w3-border">username3</label>
-							<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
-						</p>
-						<p>
-							<label class="w3-border">username3</label>
-							<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
-						</p>
-						<p>
-							<label class="w3-border">username3</label>
-							<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
-						</p>
+				<ul class="w3-ul w3-margin-top" style="width: 60%; height: 200px; margin: auto; overflow: auto;">
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
+					</p>
+					<p>
+						<li class="w3-border" style="width: 30%; display: inline-block;">username</li>
+						<button class="w3-button w3-purple w3-round-large" style=" display: inline-block;">NOTIFY</button>
+					</p>
 			  	</ul>
 			</div>
 		</div>
-		<div class="w3-container" style="position:fixed; width: 20%; height: 50%; float: right; text-align: center; padding:10px; margin: auto; display: inline-block; padding-top: 3%; padding-right: 2%;">
+		<div class="w3-container" style="position:fixed; width: 30%; height: 50%; float: right; text-align: center; padding:10px; margin: auto; display: inline-block; padding-top: 3%; padding-right: 10%;">
 			<h2 style="font-weight: bold;">Contest of the Week</h2>
 			<ul class="w3-ul w3-margin-top" style="height: 250px; margin: auto; overflow: auto;">
 				<table class="w3-table-all w3-hoverable">
 				    <thead>
 				      <tr class="w3-light-grey ">
-				        <th>username</th>
-				        <th>Points</th>
+				        <th style="text-align: center;">username</th>
+				        <th style="text-align: center;">Points</th>
 				      </tr>
 				    </thead>
 				    <tr>
-				      <td>Jill</td>
-				      <td>50</td>
+				      <td style="text-align: center;">Jill</td>
+				      <td style="text-align: center;">50</td>
 				    </tr>
 				    <tr>
-				      <td>Eve</td>
-				      <td>94</td>
+				      <td style="text-align: center;">Eve</td>
+				      <td style="text-align: center;">94</td>
 				    </tr>
 				    <tr>
-				      <td>Adam</td>
-				      <td>67</td>
+				      <td style="text-align: center;">Adam</td>
+				      <td style="text-align: center;">67</td>
 				    </tr>
 				    <tr>
-				      <td>Adam</td>
-				      <td>67</td>
+				      <td style="text-align: center;">Adam</td>
+				      <td style="text-align: center;">67</td>
 				    </tr>
 				    <tr>
-				      <td>Adam</td>
-				      <td>67</td>
+				      <td style="text-align: center;">Adam</td>
+				      <td style="text-align: center;">67</td>
 				    </tr>
 				    <tr>
-				      <td>Adam</td>
-				      <td>67</td>
+				      <td style="text-align: center;">Adam</td>
+				      <td style="text-align: center;">67</td>
 				    </tr>
 				    <tr>
-				      <td>Adam</td>
-				      <td>67</td>
+				      <td style="text-align: center;">Adam</td>
+				      <td style="text-align: center;">67</td>
 				    </tr>
 				    <tr>
-				      <td>Adam</td>
-				      <td>67</td>
+				      <td style="text-align: center;">Adam</td>
+				      <td style="text-align: center;">67</td>
 				    </tr>
 			  </table>
 			</ul>
