--- a/src/companyMainPage.html
+++ b/src/companyMainPage.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" type="text/css" href="../codeint/styles/w3.css">
+	<link rel="stylesheet" type="text/css" href="styles/w3.css">
 	<title>CodeInt - Company Main Page</title>
 	<style>
 	/* width */
